fixed overlapping popups

--- a/webapps/ROOT/assets/styles/base.css
+++ b/webapps/ROOT/assets/styles/base.css
@@ -462,10 +462,6 @@ a:active.button {
     display: inline;
 }
 
-.popup_term {
-    position: relative;
-}
-
 .popup_box:hover .popup {
     display: block;
     z-index: 9;
